# geedar-lib

./: .coverage  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: geedar.md  product_specs.md
geedar_lib/: cli.py  geedar.py  product_specs.py  utils.py
tests/: test_geedar.py
