[tool.poetry]
name = "geedar-lib"
version = "0.1.0"
description = "Este script destina-se a recuperar dados do Google Earth Engine."
authors = ["lucasuchoa98 <lucasuchoalg@gmail.com>"]
readme = "README.md"
packages = [{include = "geedar_lib"}]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
"Documentação" = "https://geedar-lib.readthedocs.io/en/latest/"
"Código" = "https://github.com/lucasuchoa98/geedar-lib"
"Bug Tracker" = "https://github.com/lucasuchoa98/geedar-lib/issues"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
fastkml = "^0.12"
earthengine-api = "^0.1.348"
typer = "^0.9.0"
rich = "^13.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.6"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
docs = "mkdocs serve"
test = "pytest -s -x --cov=geedar_lib -vv"
post_test = "coverage html"